--- a/jobsnatch2/templates/candidate.html
+++ b/jobsnatch2/templates/candidate.html
@@ -26,6 +26,9 @@
        	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <script type='text/javascript' src='/JavaScriptSpellCheck/include.js' ></script>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+	      <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
 
  <style>
@@ -213,7 +216,7 @@
                       
                         <div style="margin-top:7%;margin-left:-1%;width:100%">
                           <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black" style="background: rgb(10, 62, 87);border-radius:5px;">Update Profile</button>
-                          <a href="{% url 'idcard' %}"><button class="w3-button w3-black" style="background: rgb(10, 62, 87);border-radius:5px;">View ID</button></a>
+                          <a href="{% url 'idcard' %}"><button class="w3-button w3-black" style="background: rgb(10, 62, 87);border-radius:5px;" name="_save">View ID</button></a>
                         </div>
                         
                      
