--- a/jobsnatch2/templates/index.html
+++ b/jobsnatch2/templates/index.html
@@ -224,7 +224,7 @@ div[role="progressbar"]::before {
       <a href="{% url 'resume' %}">Resume</a>
       <a href="{% url 'feedbacks' %}">Feedbacks</a>
       <a href="#cati">Internships</a>
-      <a href="{% url 'get_news' %}">Payment</a>
+      <a href="{% url 'coverletterform' %}">coverletterform</a>
       <a href="{% url 'get_news' %}">Latest News</a>
       
       
