--- a/jobsnatch2/templates/resno.html
+++ b/jobsnatch2/templates/resno.html
@@ -27,12 +27,17 @@
 
 {% for i in data1 %}
 <div style="width:30%;background-color:rgba(234, 234, 234, 0.58);border-radius:10px;padding:1%;height:50%;">
-        <form action="{% url 'res' %}" method="post">
+      <form action="{% url 'res' %}" method="post">
             {% csrf_token %}
             
             <h2 style="margin-left: -60%;">Resumme - {{ forloop.counter }}</h2>
                 <input type="hidden" name="iid" value="{{i.res_id}}">
                 <button type="submit" style="background-color: rgb(39, 202, 39);border-radius:5px; color:white;border:none;width:70px;height:40px;float:right;margin-top:-15%;">View</button>
+       </form>
+       <form action="{% url 'my_pdf' %}" method="post">
+        {% csrf_token %}
+            <input type="hidden" name="iid" value="{{i.res_id}}">
+            <button type="submit" style="background-color: rgb(39, 202, 39);border-radius:5px; color:white;border:none;width:70px;height:40px;float:left;margin-top:-15%;margin-left:60%;">Download</button>
        </form>
 </div><br>
 {% endfor %}
